--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </style>
 </head>
 <body>
-  <h2>Sample Syllabus Query Page</h2>
+  <h2> Canada US relations Syllabus Query Page - all queries and responses are recorded by qualtrics</h2>
   <form id="queryForm">
     <textarea name="query" id="query" rows="5" cols="60" placeholder="Type your question here..."></textarea><br />
     <button type="submit">Submit</button>
