--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   </style>
 </head>
 <body>
-  <h2> Canada US relations Syllabus Query Page - all queries and responses are recorded by qualtrics</h2>
+  <h2> Canada US relations Syllabus Bot</h2>
   <form id="queryForm">
     <textarea name="query" id="query" rows="5" cols="60" placeholder="Type your question here..."></textarea><br />
     <button type="submit">Submit</button>
   </form>
-  <h3>Response:</h3>
+  <h3>Response: (all queries and responses are recorded with qualtrics)</h3>
   <pre id="response"></pre>
 
   <script>
