--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <textarea name="query" id="query" rows="5" cols="60" placeholder="Type your question here..."></textarea><br />
     <button type="submit">Submit</button>
   </form>
-  <h3>Response: (all queries and responses are recorded with qualtrics)</h3>
+  <h3>Response:</h3>
+  <h5> all queries and responses are anonymously recorded by qualitrics for feedback, research and improvement</h5>
   <pre id="response"></pre>
 
   <script>
