--- a/index.html
+++ b/index.html
@@ -8,12 +8,98 @@
     body {
       font-family: 'Lato', sans-serif;
       margin: 2rem;
+      background-color: #E8E3F3; /* UWO light purple */
+      background-image:
+        repeating-linear-gradient(
+          45deg,
+          rgba(98, 63, 153, 0.05) 0,
+          rgba(98, 63, 153, 0.05) 1px,
+          transparent 1px,
+          transparent 200px
+        ),
+        repeating-linear-gradient(
+          -45deg,
+          rgba(98, 63, 153, 0.05) 0,
+          rgba(98, 63, 153, 0.05) 1px,
+          transparent 1px,
+          transparent 200px
+        );
+      position: relative;
     }
+
+    /* Repeating watermark */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 0;
+      background-image:
+        repeating-linear-gradient(
+          45deg,
+          rgba(98, 63, 153, 0.08) 0,
+          rgba(98, 63, 153, 0.08) 0
+        ),
+        repeating-linear-gradient(
+          45deg,
+          transparent 0,
+          transparent 150px,
+          rgba(98, 63, 153, 0.08) 150px,
+          rgba(98, 63, 153, 0.08) 151px
+        );
+      mask-image: repeating-linear-gradient(
+        45deg,
+        transparent 0,
+        transparent 200px,
+        rgba(0, 0, 0, 0.1) 200px,
+        rgba(0, 0, 0, 0.1) 400px
+      );
+      background-size: 400px 400px;
+    }
+
+    /* Layer repeating text watermark */
+    html {
+      --watermark-text: "Syllabus Questions Only";
+    }
+
+    body::after {
+      content: var(--watermark-text);
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 200%;
+      height: 200%;
+      font-size: 3rem;
+      color: rgba(98, 63, 153, 0.07); /* faint purple */
+      white-space: pre;
+      pointer-events: none;
+      z-index: 0;
+      transform: rotate(-30deg);
+      background-repeat: repeat;
+      background-size: 400px 200px;
+      background-image:
+        repeating-linear-gradient(
+          45deg,
+          transparent 0 60px,
+          rgba(98, 63, 153, 0.07) 60px 61px,
+          transparent 61px 200px
+        );
+    }
+
+    form, #response, h2, h3, h5 {
+      position: relative;
+      z-index: 1;
+    }
+
     textarea {
       font-family: monospace;
       width: 100%;
       max-width: 600px;
     }
+
     #response {
       white-space: pre-wrap;
       margin-top: 1rem;
@@ -25,13 +111,13 @@
   </style>
 </head>
 <body>
-  <h2> Canada US relations Syllabus Bot</h2>
+  <h2>Canada–US Relations Syllabus Bot</h2>
   <form id="queryForm">
     <textarea name="query" id="query" rows="5" cols="60" placeholder="Type your question here..."></textarea><br />
     <button type="submit">Submit</button>
   </form>
   <h3>Response:</h3>
-  <h5> all queries and responses are anonymously recorded by qualitrics for feedback, research and improvement</h5>
+  <h5>All queries and responses are anonymously recorded by Qualtrics for feedback, research, and improvement.</h5>
   <pre id="response"></pre>
 
   <script>
